# sibervatan-mobile-lab

./: README.md
basic-detections/: gradle.properties  settings.gradle.kts
basic-detections/app/: build.gradle.kts
basic-detections/app/src/main/: AndroidManifest.xml
basic-detections/app/src/main/cpp/: CMakeLists.txt  frida_checker.cpp  frida_checker.h  frida_library_checker.cpp  frida_library_checker.h  frida_process_checker.cpp  frida_process_checker.h  port_checker.cpp  port_checker.h  root_checker.cpp  root_checker.h
basic-detections/gradle/wrapper/: gradle-wrapper.properties
certificates/: demo.jks  demo2.jks  gradle.properties
challenges/siberVatan0x01/: README.md  settings.gradle
challenges/siberVatan0x01/app/: build.gradle
challenges/siberVatan0x01/app/src/main/: AndroidManifest.xml
challenges/siberVatan0x01/gradle/wrapper/: gradle-wrapper.properties
challenges/siberVatan0x02/: README.md  settings.gradle.kts
challenges/siberVatan0x02/app/: build.gradle.kts
challenges/siberVatan0x02/app/src/main/: AndroidManifest.xml
challenges/siberVatan0x02/gradle/wrapper/: gradle-wrapper.properties
frida-example-basic/: rootdetection.js
frida-example-basic/app/: build.gradle.kts
frida-example-basic/gradle/wrapper/: gradle-wrapper.properties
key-exchange-server/: main.py
xposed-example-lab/app/: build.gradle
xposed-example-lab/app/src/main/: AndroidManifest.xml
xposed-example-lab/app/src/main/assets/: xposed_init
xposed-example-lab/gradle/wrapper/: gradle-wrapper.properties
xposed-installation/: README.md
(+38 files in other folders)
